fix: prevent table column shifting during search and responsive breakpoints

--- a/styles/layout/_responsiveTable.scss
+++ b/styles/layout/_responsiveTable.scss
@@ -109,7 +109,18 @@
 
         .responsive-table {
             width: 100%;
+            table-layout: fixed;
             border-collapse: collapse;
+
+            th:nth-child(1),
+            td:nth-child(1) {
+                width: 70px;
+            }
+
+            th:nth-child(2),
+            td:nth-child(2) {
+                width: auto;
+            }
 
             thead tr {
                 text-align: left;
